--- a/homework/1/src/login.html
+++ b/homework/1/src/login.html
@@ -77,7 +77,7 @@
 							
 						</div>
 		        		<div class="col-xs-6 col-lg-4">
-		        			<a href="./mainpage.html" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</a>
+		        			<a href="mainpage.html" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</a>
 		        		</div>
 					</div>
 				</div><!-- form -->
