minor changes of hwk1 sign-up button

--- a/homework/1/src/signup.html
+++ b/homework/1/src/signup.html
@@ -58,9 +58,9 @@
 					
 		        	<div class="row">
 		        		<div class="col-xs-8 col-lg-4">
-		        			<a href="./mainpage.html"><button class="btn btn-lg btn-success btn-block" type="submit">Sign Up</button></a>
+		        			<a href="./mainpage.html" class="btn btn-lg btn-success btn-block" type="submit">Sign Up</a>
 		        		</div>
-		        		<div class="col-xs-4 col-lg-4">
+		        		<div class="col-xs-4 col-lg-4">s
 							<p id="oldusr">Old user?</p>
 							<a href="./login.html"><p>Sign in</p></a>
 						</div>
