--- a/homework/1/src/profile.html
+++ b/homework/1/src/profile.html
@@ -5,7 +5,7 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	    <meta name="description" content="15637 HW1">
+	    <meta name="description" content="User Profile">
 	    <meta name="author" content="Zhiqiao Lin">
 	    <link rel="icon" href="./images/favicon.ico">
 	    
