10/05 In-class exercise

--- a/in-class/2016-10-05 JavaScript/track1.html
+++ b/in-class/2016-10-05 JavaScript/track1.html
@@ -13,6 +13,6 @@
 
   <input type="text" id="textfield" />
   <button id="addBtn">Add</button>
-
+  <script src="track1.js"></script>
 </body>
 </html>
