--- a/in-class/2016-10-10 Ajax/fortune.html
+++ b/in-class/2016-10-10 Ajax/fortune.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
+    <p id="info"></p>
     <p id="content"></p>
     <button type="button" onclick="getFortune()">Update Fortune</button>
 
